order and filter periods and work

--- a/src/app/periods/periods.component.html
+++ b/src/app/periods/periods.component.html
@@ -5,17 +5,17 @@
 
         <ng-container matColumnDef="start">
           <th mat-header-cell *matHeaderCellDef> Start </th>
-          <td mat-cell *matCellDef="let element"> {{element.data.start.toDate().toLocaleDateString()}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.data.start.toDate().toLocaleTimeString()}} </td>
         </ng-container>
 
         <ng-container matColumnDef="end">
           <th mat-header-cell *matHeaderCellDef> End </th>
-          <td mat-cell *matCellDef="let element"> {{element.data.end.toDate().toLocaleDateString()}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.data.end.toDate().toLocaleTimeString()}} </td>
         </ng-container>
 
         <ng-container matColumnDef="elapsed">
           <th mat-header-cell *matHeaderCellDef> Elapsed </th>
-          <td mat-cell *matCellDef="let element"> {{element.data.elapsed}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.data.elapsed.toDate().toLocaleTimeString()}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
