--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -33,7 +33,7 @@
           <!-- Position Column -->
           <ng-container matColumnDef="description">
             <th mat-header-cell *matHeaderCellDef style="width: 80%"> Desc </th>
-            <td mat-cell *matCellDef="let element"> {{element.data.description}} </td>
+            <td mat-cell *matCellDef="let element" [innerHTML]='element.data.description'> </td>
           </ng-container>
       
           <!-- Name Column -->
